<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mmskowron.loginapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/rabbit"
        android:id="@+id/rabbitImage"
        android:src="@drawable/rabbit"
        android:cropToPadding="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxHeight="@android:dimen/app_icon_size"
        android:layout_height="250dp"
        android:alpha="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rabbit2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/secondRabbitImaga"
        android:layout_above="@+id/textView"
        android:alpha="0" />

    <TextView
        android:text="Logowanie:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="Logowanie:"
        android:paddingLeft="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/rabbitImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:hint="Username"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:text="SAY HELLO"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="hello"
            android:id="@+id/sayHelloButton"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/logInButton"
            android:layout_toStartOf="@+id/logInButton"
            android:textColor="@android:color/holo_green_dark" />

        <Button
            android:text="LOG IN"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/logInButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/holo_red_dark" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/linearLayout2"
            android:layout_toEndOf="@+id/linearLayout2"
            android:id="@+id/settingButton"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:hint="Password"
        android:layout_below="@+id/nameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
